# RabbiTTY

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  install.sh  rust-toolchain
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: compile_check.yml  lint.yml  release.yml
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
locales/: en.toml  ko.toml
src/: config.rs  i18n.rs  keychain.rs  lib.rs  main.rs  platform.rs  session.rs  session_history.rs  ssh.rs  terminal.rs
src/config/: defaults.rs  file.rs  metrics.rs  mod.rs  sanitize.rs  shortcuts.rs  types.rs  updates.rs
src/gui/: app.rs  icons.rs  mod.rs  pane.rs  render.rs  session.rs  tab.rs  terminal.rs  terminal.wgsl  theme.rs
src/gui/app/: mod.rs  shortcuts.rs  subscription.rs  update.rs  view.rs
src/gui/app/update/: mod.rs  settings.rs  sftp.rs  tab.rs  terminal.rs
src/gui/app/view/: dialog.rs  mod.rs  password_prompt.rs  settings.rs  sftp.rs  shell_picker.rs
src/gui/components/: button.rs  category_transition.rs  container.rs  context_menu.rs  ime_wrapper.rs  mod.rs  tab_bar.rs  widget_styles.rs
src/gui/render/: bg.rs  composite.rs  mod.rs  text.rs
src/gui/render/shaders/: terminal.wgsl
src/gui/render/text/: atlas.rs  mod.rs  rasterize.rs
src/gui/settings/: appearance.rs  mod.rs  shortcuts.rs  ssh.rs  terminal.rs  theme.rs  ui.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/session/: history.rs  mod.rs
src/ssh/: ansi.rs  mod.rs  user_config.rs
src/terminal/: engine.rs  font.rs  mod.rs  theme.rs  url.rs
tests/: install_linux_desktop_test.sh
