[package]
name = "rabbitty"
version = "0.0.2"
edition = "2024"
authors = ["neverprogrammer@gmail.com"]
rust-version = "1.92"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
debug = false
strip = false

[dependencies]
# GUI & Rendering
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "tokio",
    "canvas",
    "advanced",
    "image",
    "x11",
    "wayland",
] }
wgpu = "28.0.0"
bytemuck = { version = "1.25", features = ["derive"] }
ab_glyph = "0.2"

# Async
tokio = { version = "1.50", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
] }
futures = "0.3.32"

# Terminal
alacritty_terminal = "0.25.1"
portable-pty = "0.9"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
fontdb = "0.23"

# Windows-specific (custom titlebar with resize border)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3"
