[package]
name = "rabbitty"
version = "0.1.2"
edition = "2024"
authors = ["neverprogrammer@gmail.com"]
rust-version = "1.92"
description = "Fast, lean, cross-platform terminal emulator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wHoIsDReAmer/RabbiTTY"
homepage = "https://github.com/wHoIsDReAmer/RabbiTTY"
readme = "README.md"
keywords = ["terminal", "ssh", "emulator", "gui"]
categories = ["command-line-utilities", "gui"]
exclude = [".github/"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
debug = false
strip = false

[dependencies]
# GUI & Rendering
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "advanced",
    "image",
    "svg",
    "tokio",
    "x11",
    "wayland",
] }
bytemuck = { version = "1.25", features = ["derive"] }
ab_glyph = "0.2"

futures = { version = "0.3.32", default-features = false }

# Terminal
alacritty_terminal = "0.26.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
fontdb = "0.23"

# SSH
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh2-config = "0.7"
async-trait = "0.1"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
tokio = { version = "1", default-features = false, features = ["io-util", "process", "sync", "fs", "rt"] }

# Windows-specific (custom titlebar with resize border)
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
windows = { version = "0.62", default-features = false, features = [
    "std",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }
objc2 = "0.6"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }
# Compositor-side window blur (issue #38).
# X11: set the _KDE_NET_WM_BLUR_BEHIND_REGION property (KWin & picom honour it).
x11rb = "0.13"
# Wayland: request blur via KWin's org_kde_kwin_blur protocol. The system
# (libwayland) backend lets us wrap winit's existing wl_display / wl_surface.
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols-plasma = { version = "0.3", features = ["client"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[package.metadata.bundle]
name = "Rabbitty"
identifier = "io.github.rabbitty"
icon = ["assets/icon.icns"]
version = "0.1.2"
copyright = "Copyright 2026 RabbiTTY contributors"
category = "public.app-category.utilities"
short_description = "Fast, lean terminal emulator."
long_description = "Rabbitty is a fast, lean, cross-platform terminal emulator with SSH support."
